--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import "tailwindcss";
-
 @theme{
-    --color-bg: #141D25;
-    --color-primary: #FFFFFF;
-    --color-secondary: #0D97DC;
+    --color-bg: #0B131A;
+    --color-blue: #0D97DC;
+    --color-item: #141D25;
+    
+}
+
+body{
+    font-family: "Open Sans", sans-serif;
+}
+
+h1{
+    font-weight: bolder;
+    color: white;
+    font-size: 28px;
+}
+h2{
+    font-weight: bold;
+    color: white;
+    font-size: 22px;
+}
+h3{
+    font-weight: bold;
+    color: white;
+    font-size: 18px;
+}
+.link{
+    color: var(--color-blue);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.btn{
+    cursor: pointer;
+    background-color: var(--color-blue);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    max-width: max-content;
+    position: fixed;
+    bottom: 96px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
 }
